# swagger-api-agent

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.simple  LICENSE  MANIFEST.in  Makefile  POETRY_MIGRATION.md  README.md  docker-compose.yml  docker.sh  pyproject.toml  requirements.in  requirements.txt  setup.py  start-dev.sh  swagger-api-agent  swagger-web-api
docs/: api_token_usage.md  architecture.md  authentication.md  docker.md  implementation_summary.md  migration-guide.md  mock-server.md  multi_user_session.md  web_api_token_usage.md
examples/: example_openapi.yaml  example_saas.yaml  multi_user_demo.py
scripts/: entrypoint.sh  mock_server.py  simple_mock_server.py  start_mock_server.sh
src/swagger_api_agent/: __init__.py  agent.py  api_caller.py  cli.py  config.py  llm_client.py  openapi_parser.py  user_session_manager.py  web_api.py
tests/: conftest.py  test_agent.py  test_config.py  test_user_session_manager.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: ApiInfo.tsx  AuthGuard.tsx  ChatInterface.tsx  ConnectionStatus.tsx  ConversationHistory.tsx  FunctionsList.tsx  LoginPage.tsx  MainLayout.tsx  UserStatus.tsx
web/src/context/: AppContext.tsx
web/src/hooks/: useApp.ts  useTokenCheck.ts
web/src/services/: api.ts
